	  prepending fails. (DLR)
	- Simplify the routine for closing the file just before we
	  indicate success on the statusbar. (DLR)
- global.c:
  shortcut_init()
	- Change the cursor position display help text to use "display"
	  instead of "show", for consistency. (DLR)
	- In the main shortcut list, move the "Refresh" shortcut down to
	  after the "Enter" shortcut, for consistency. (DLR)
  toggle_init()
	- In the global toggle list, move the "Constant cursor position
	  display" toggle up to after the "Use more space for editing"
	  toggle, for consistency. (DLR)
	- Reorganize the global toggle list to make it easier for new
	  users.  It now lists toggles that affect the way things are
	  displayed, followed by toggles that affect editing, followed
	  by toggles that have to do with peripheral things. (DLR,
	  suggested by Benno Schulenberg)
- nano.c:
  renumber()
	- Remove invalid assert. (DLR, found by Filipe Moreira)
- nano.h:
	- Reorder the toggle #defines to match their corresponding order
	  in toggle_init(). (DLR)
- rcfile.c:
  parse_argument()
	- Rename variable ptr_bak to ptr_save, for consistency. (DLR)
  parse_syntax()
	- Properly generate an error if we've read in a previous syntax
	  without any associated color commands. (DLR)
	- Don't generate an error if we find a duplicate syntax name,
	  since we might be trying to override a syntax in the global
	  nanorc with one in our local nanorc.  Instead, free any
	  duplicate syntaxes we find, so that we always use the last
	  syntax with a given name. (DLR)
  parse_colors()
	- Check for a color command's not following a syntax line before
	  anything else. (DLR)
  do_rcfile()
	- Check for the rcfile's being a directory or device file and
	  reject it if it is, for consistency with file handling
	  elsewhere. (DLR)
	- Remove SYSCONFDIR #ifdef, as SYSCONFDIR should always be set.
	  (DLR)
	- Change all rcfile error messages to refer to commands instead
	  of directives, for consistency with nanorc.5. (DLR)