@@ -414,11 +414,13 @@ typedef struct rcoption {
 #define NANO_ALT_COMMA ','
 #define NANO_ALT_MINUS '-'
 #define NANO_ALT_PERIOD '.'
-#define NANO_ALT_9 '9'
+#define NANO_ALT_SLASH '/'
 #define NANO_ALT_0 '0'
+#define NANO_ALT_9 '9'
 #define NANO_ALT_LCARAT '<'
 #define NANO_ALT_EQUALS '='
 #define NANO_ALT_RCARAT '>'
+#define NANO_ALT_BACKSLASH '\\'
 #define NANO_ALT_RBRACKET ']'
 #define NANO_ALT_USCORE '_'
 #define NANO_ALT_A 'a'
@@ -495,12 +497,16 @@ typedef struct rcoption {
 #define NANO_SPELL_FKEY		KEY_F(12)
 #define NANO_FIRSTLINE_KEY	NANO_PREVPAGE_KEY
 #define NANO_FIRSTLINE_FKEY	NANO_PREVPAGE_FKEY
+#define NANO_FIRSTLINE_ALTKEY	NANO_ALT_SLASH
 #define NANO_FIRSTFILE_KEY	NANO_FIRSTLINE_KEY
 #define NANO_FIRSTFILE_FKEY	NANO_FIRSTLINE_FKEY
+#define NANO_FIRSTFILE_ALTKEY	NANO_FIRSTLINE_ALTKEY
 #define NANO_LASTLINE_KEY	NANO_NEXTPAGE_KEY
 #define NANO_LASTLINE_FKEY	NANO_NEXTPAGE_FKEY
+#define NANO_LASTLINE_ALTKEY	NANO_ALT_BACKSLASH
 #define NANO_LASTFILE_KEY	NANO_LASTLINE_KEY
 #define NANO_LASTFILE_FKEY	NANO_LASTLINE_FKEY
+#define NANO_LASTFILE_ALTKEY	NANO_LASTLINE_ALTKEY
 #define NANO_REFRESH_KEY	NANO_CONTROL_L
 #define NANO_JUSTIFY_KEY	NANO_CONTROL_J
 #define NANO_JUSTIFY_FKEY	KEY_F(4)
